# odefa

./: .gitignore  .gitmodules  .merlin  Makefile  README.md  _oasis  config_dll_path.sh  ddpa_graphs.json  ddpa_toploop  dune  dune-project  hello.natodefa  json_test.ml  odefa.opam  sum.natodefa
src/abstract-ast/: abstract_ast.ml  abstract_ast_utils.ml  dune
src/adi-analysis/: adi_analysis.ml  adi_analysis.mli  adi_interpreter.ml  adi_monad.ml  adi_specification.ml  adi_structure_types.ml  adi_types.ml  dune
src/adi-analysis/context-models/: adi_context_model.ml  adi_n_element_stack.ml  adi_ordered_set_keep.ml  adi_ordered_set_move.ml  adi_set.ml  adi_single_element_stack.ml  adi_two_element_stack.ml  adi_unit_stack.ml
src/adi-analysis/environment-models/: adi_copied_environment.ml  adi_environment_model.ml  adi_referenced_environment.ml
src/answer-generation/: dune  generator.ml  generator.mli  generator_answer.ml  generator_answer.mli  generator_utils.ml
src/answer-generation/command-line/: cli_parser.ml  cli_parser.mli  cli_parser_utils.ml
src/plume-analysis/: ddpa_analysis.ml  dune  plume_analysis.ml  plume_analysis_logging.ml
src/plume-analysis/context-models/: plume_context_model.ml  plume_n_element_stack.ml  plume_ordered_set.ml  plume_ordered_set_keep.ml  plume_ordered_set_move.ml  plume_set.ml  plume_single_element_stack.ml  plume_two_element_stack.ml  plume_unit_stack.ml
src/plume-analysis/context-stacks/: ddpa_context_stack.ml  ddpa_n_element_stack.ml  ddpa_nonrepeating_stack.ml  ddpa_single_element_stack.ml  ddpa_two_element_stack.ml  plume_context_stack.ml  plume_n_element_stack.ml  plume_single_element_stack.ml  plume_two_element_stack.ml  plume_unit_stack.ml
src/plume-analysis/pds/: ddpa_pds_dynamic_pop_handler.ml  ddpa_pds_dynamic_pop_types.ml  ddpa_pds_edge_functions.ml  ddpa_pds_structure_types.ml  plume_pds_dynamic_pop_handler.ml  plume_pds_dynamic_pop_types.ml  plume_pds_edge_functions.ml  plume_pds_structure_types.ml
src/plume-analysis/types/: ddpa_graph.ml  plume_graph.ml
src/plume-analysis/utils/: ddpa_utils.ml  plume_utils.ml
src/scheme-translator/: dune  scheme_ast.ml  scheme_lexer.mll  scheme_parse.ml  scheme_parser.mly
test/: .merlin  dune  exp_lexer.mll  exp_parser.mll  exp_parser.mly  expectation_lexer.mll  expectation_parser.mly  expectation_parser_tool.ml  test.ml  test_a_translate.ml  test_abstract_stores.ml  test_context_stacks.ml  test_continuation_transform.ml  test_expectation_formatting.ml  test_expectation_types.ml  test_files.ml  test_ocaml_ast_utils.ml  test_pds_programming.ml  test_ppx_programming.ml  test_symbolic_monad.ml  test_utils.ml
test/_build/: _digests  _log  expectation_lexer.ml  expectation_lexer.ml.depends  expectation_lexer.mll  expectation_parser.ml  expectation_parser.mli  expectation_parser.mli.depends  expectation_parser.mly  expectation_parser_tool.ml.depends  ocamlc.where  test_expectation_formatting.ml  test_expectation_formatting.ml.depends  test_expectation_types.ml  test_expectation_types.ml.depends
test/unittest/: dune  formula_test_utils.ml  test.ml  test_files.ml  test_solver.ml  test_translator.ml
(+809 files in other folders)
