(ocamllex
  expectation_lexer
)
(menhir
  (flags (--explain))
  (modules
    expectation_parser
  )
)

(alias
  (name runtest)
  (deps test.exe (glob_files ../test-sources/*))
  (action (chdir .. (run ./test/test.exe)))
)

(executable
  (name test)
  (libraries
    batteries
    jhupllib
    odefa.ast
    odefa.ddpa
    odefa.parser
    odefa.toploop
    odefa.natural
    oUnit
    ppx_deriving_yojson
    yojson
  )
  (preprocess
    (pps
      ocaml-monadic
      ppx_deriving.std
      ppx_deriving_yojson
    )
  )
)
