(library
  (name odefa_answer_generation)
  (public_name odefa.answer-generation)
  (synopsis "Odefa answer generation library")
  (libraries
    batteries
    jhupllib
    odefa.ast
    odefa.ddpa
    odefa.interpreter
    odefa.parser
    odefa.statistics
    odefa.symbolic-interpreter
    odefa.utils
  )
  (preprocess
    (pps
      ocaml-monadic
      ppx_deriving.std
    )
  )
)
