(copy_files# context-models/*.{ml,mli})
(copy_files# pds/*.{ml,mli})
(copy_files# types/*.{ml,mli})
(copy_files# utils/*.{ml,mli})
(library
  (name odefa_plume)
  (public_name odefa.plume)
  (synopsis "Plume analysis for Odefa")
  (libraries
    batteries
    jhupllib
    monadlib
    odefa.abstractAst
    odefa.ast
    odefa.utils
    pds-reachability
    ppx_deriving_yojson
    landmarks
  )
  (preprocess
    (pps
      ocaml-monadic
      ppx_deriving.std
      ppx_deriving_yojson
      landmarks.ppx --auto
    )
  )
  (flags
    (:standard -w -39) ;for ppx_deriving_yojson, which generates extra rec flags
  )
)
